add: tsoa route
